# AndroidCourse

./: README.md
Calculator/: build.gradle
Calculator/app/: build.gradle
Calculator/app/src/main/: AndroidManifest.xml
Calculator/gradle/wrapper/: gradle-wrapper.properties
dialog_test/app/: build.gradle
dialog_test/app/src/main/: AndroidManifest.xml
dialog_test/gradle/wrapper/: gradle-wrapper.properties
handler_test/app/: build.gradle
handler_test/app/src/main/: AndroidManifest.xml
handler_test/gradle/wrapper/: gradle-wrapper.properties
hexgame/app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
hexgame/app/assets/: app.js  gen.js  generator.js  style.css
hexgame/app/src/androidTest/java/rolrence/hexgame/: ExampleInstrumentedTest.kt
hexgame/app/src/main/: AndroidManifest.xml
hexgame/app/src/main/cpp/: AlphaHexNative.cpp  cmdapi.cpp  config.h  rolrence_hexgame_hex_AlphaHexNative.h  wrapper_test.cpp
hexgame/app/src/main/java/rolrence/hexgame/: AlphaHex.kt  MainActivity.kt
hexgame/app/src/main/java/rolrence/hexgame/hex/: AlphaHex.kt  AlphaHexNative.java  Util.java
hexgame/app/src/main/java/rolrence/hexgame/js/: JsBinder.kt  KotlinMethod.kt
hexgame/app/src/main/java/rolrence/hexgame/test/: HexMoveTest.kt  test.kt
hexgame/app/src/main/res/layout/: activity_dialog.xml  activity_main.xml
hexgame/app/src/main/res/layout-land/: activity_main.xml
hexgame/app/src/main/res/menu/: opt_menu.xml
hexgame/app/src/main/res/values/: array.xml  strings.xml
hexgame/app/src/test/java/rolrence/hexgame/: ExampleUnitTest.kt
hexgame/gradle/wrapper/: gradle-wrapper.properties
intent_startup_test/: build.gradle
intent_startup_test/app/: build.gradle  proguard-rules.pro
intent_startup_test/app/src/main/: AndroidManifest.xml
intent_startup_test/gradle/wrapper/: gradle-wrapper.properties
intent_test/app/: build.gradle  proguard-rules.pro
intent_test/app/src/main/: AndroidManifest.xml
intent_test/gradle/wrapper/: gradle-wrapper.properties
local_file/app/: build.gradle
local_file/app/src/main/: AndroidManifest.xml
local_file/gradle/wrapper/: gradle-wrapper.properties
tensorflow_demo/: build.gradle
tensorflow_demo/app/: build.gradle  download-models.gradle
tensorflow_demo/app/jni/: Android.mk  Application.mk  CMakeLists.txt  imageutils_jni.cc
tensorflow_demo/app/jni/object_tracking/: config.h  flow_cache.h  frame_pair.cc  frame_pair.h  geom.h  gl_utils.h  image-inl.h  image.h  image_data.h  image_utils.h  integral_image.h  jni_utils.h  keypoint.h  keypoint_detector.cc  keypoint_detector.h  logging.cc  logging.h  object_detector.cc  object_detector.h  object_model.h  object_tracker.cc  object_tracker.h  object_tracker_jni.cc  optical_flow.cc  optical_flow.h  sprite.h  time_log.h  tracked_object.cc  tracked_object.h  utils.h
tensorflow_demo/gradle/wrapper/: gradle-wrapper.properties
(+104 files in other folders)
